--- a/bingo1.html
+++ b/bingo1.html
@@ -9,7 +9,7 @@
 <body class="body-bingo">
     <header>
         <div class="header-logo">
-            <input type="image" onclick="window.location.href='bingo.html'" src="bingo-logo.png" alt="bingo-logo" class="header-logo-picture">
+            <input type="image" onclick="window.location.href='index.html'" src="bingo-logo.png" alt="bingo-logo" class="header-logo-picture">
         </div>
     </header>
     <main>
